  persist from a parent template to an included one (but the include's 
  changes will not be reflected on the parent), and from a template 
  to the next if you render several in series.
+ Added {template} plugin that allows you to define sub-templates and then
  call them (works recursively too, good for menus and lists)
+ Added {load_templates} to load external sub-templates into your file
+ Allowed string concatenation assignments with {$foo.="bar"}  
* Fixed a bug with parsing AND/OR keywords in conditionals when they were
  followed by round brackets
* Fixed assignments not handling multi-line values correctly
* Fixed parameter parsing issue when a plugin name was all uppercased
* Fixed assignments failing with autoEscape enabled
* Fixed parsing of vars with string keys that was too greedy
* Dwoo_Template::$chmod is now enforced for directories as well (#18)
* Many new unit tests to improve code coverage and a bunch of bug fixes 
  that resulted, but I didn't really keep track of them

[2008-12-24] 1.0.1
* Direct assignments like {$foo = 5} now allow spaces around the operator
* Fixed a {foreach} bug with the implode argument
* Fixed modulo operator in if statements
* Fixed date_format handling of negative and small unix timestamps
* Fixed a weird reference bug with ZF and includes.. whatever but thanks
  to Denis Arh for the patch

[2008-10-23] 1.0.0
! BC Break: Small one that probably won't affect anyone, but it makes the
  PluginProxy feature much stronger. Basically if you used a custom one you
  will get a fatal error and need to update it to conform to the new
  IPluginProxy interface, that's it
+ Compiler: the modifier syntax (|foo) can now be applied on functions and on
  complex variables i.e. {$obj->getStuff()|upper} or {lower('foo')|upper}
+ SmartyCompat: Added a {section} plugin but I strongly discourage using it,
  it was really made to support legacy templates, since {for} doesn't have to